--- a/site/routes/assets/registration.css
+++ b/site/routes/assets/registration.css
@@ -2,7 +2,7 @@ html{
 	font-family: sans-serif;
 }
 
-#login-panel{
+#registration-panel{
 	background-color: hsl(0, 0%, 92%);
 	border-radius: 4px;
 	width: 50%;
@@ -12,20 +12,20 @@ html{
 	text-align: center;
 }
 
-#login-center{
+#registration-center{
 	padding: 0;
 	min-width: 50%;
 	margin: auto auto;
 	text-align: center;	
 }
 
-#login-center input{
+#registration-center input{
 	border: none;
 	border-radius: 4px;
 	height: 20px;
 }
 
-#login-center button{
+#registration-center button{
 	width: 100%;
 	height: 25px;
 	border: none;
